@@ -12,7 +12,11 @@ module Lobbyist
       def self.create(company_id, params = {})
         create_from_response(post("/v2/companies/#{company_id}/email_invitations.json", {'email_invitation' => params}))
       end
-    
+
+      def self.reset(id, company_id, params = {})
+        create_from_response(put("/v2/companies/#{company_id}/email_invitations/#{id}/reset", {contact: params}))
+      end
+
       def self.metrics(company_id, params = {})
         create_from_response(get("/v2/companies/#{company_id}/email_invitations/metrics.json", params))
       end
